--- a/BP/manifest.json
+++ b/BP/manifest.json
@@ -14,7 +14,7 @@
 		}
 	},
 	"header": {
-		"name": "HiraethSMP: The Devine Stone",
+		"name": "§1§l[BP]§r HiraethSMP: The Devine Stone",
 		"description": "Developed by: SamuraiBread for: HiraethSMP",
 		"min_engine_version": [
 			1,
