--- a/BP/manifest.json
+++ b/BP/manifest.json
@@ -52,6 +52,14 @@
 	],
 	"dependencies": [
 		{
+			"uuid": "05462ea0-9d88-48c0-a49c-fe828b80b78a",
+			"version": [
+				1,
+				0,
+				0
+			]
+		},
+		{
 			"module_name": "@minecraft/server",
 			"version": "2.0.0"
 		},
